# PubProject

./: .gitignore
backend/: main.py  pyproject.toml
backend/auth/: controller.py  schemas.py  utils.py
backend/auth/dependencies/: current_active_auth.py  validate_auth.py
backend/comments/: models.py
backend/infrastructure/: config.py
backend/infrastructure/db/: base.py  db_helper.py
backend/likes/: models.py
backend/posts/: controller.py  models.py  post.py  repository.py  schemas.py  service.py
backend/profiles/: controller.py  profile.py  repository.py  schemas.py  service.py
backend/users/: controller.py  dependencies.py  models.py  repository.py  schemas.py
backend/userstyles/: controller.py  repository.py  schemas.py  service.py  userstyle.py
backend/userstyles.py/: controller.py  dependencies.py  models.py  repository.py  schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  posts.js  storage.js  users.js
frontend/src/components/shared/: CreatePost.jsx  PostCard.jsx
frontend/src/components/ui/: Avatar.jsx  Button.jsx  Input.jsx  Loader.jsx  Modal.jsx
frontend/src/context/: useAuthStore.js
frontend/src/layouts/: MainLayout.jsx  Navbar.jsx  RightSidebar.jsx  Sidebar.jsx
frontend/src/pages/: FeedPage.jsx  LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx
frontend/src/routes/: ProtectedRoute.jsx
